--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 QuartoNotebookRunner = "4c0109c6-14e9-4c88-93f0-2b974d3468f4"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
