--- a/Project.toml
+++ b/Project.toml
@@ -2,10 +2,14 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 QuartoNotebookRunner = "4c0109c6-14e9-4c88-93f0-2b974d3468f4"
+RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
